# phoenix

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  \  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: dusk_ci.yml
circuits/: CHANGELOG.md  Cargo.toml  README.md
circuits/src/: circuit_impl.rs  lib.rs  recipient.rs  sender_enc.rs  transaction.rs  tx_circuit.rs
circuits/src/encryption/: elgamal.rs  mod.rs
circuits/src/tx_circuit/: notes.rs
circuits/tests/: elgamal.rs  recipient.rs  serialization.rs  transaction.rs  tx_circuit.rs  verifier_data.rs
circuits/tests/common/: mod.rs
core/: CHANGELOG.md  Cargo.toml  README.md
core/benches/: sync.rs
core/src/: addresses.rs  error.rs  fee.rs  keys.rs  lib.rs  note.rs  recipient.rs  serde_support.rs  stealth_address.rs  transaction.rs
core/src/addresses/: stealth.rs  sync.rs
core/src/encryption/: aes.rs  elgamal.rs  mod.rs
core/src/keys/: public.rs  secret.rs  stealth.rs  sync.rs  view.rs
core/src/transaction/: stake.rs
core/tests/: crossover.rs  encryption.rs  keys.rs  note_test.rs  serde.rs  transaction.rs  tx_skeleton.rs
core/tests/serde/: note.json  sender_1.json  sender_2.json  tx_skeleton.json
src/: convert.rs  crossover.rs  encryption.rs  error.rs  fee.rs  keys.rs  lib.rs  macros.rs  message.rs  note.rs  permutation.rs  transaction.rs  transfer.rs
src/encryption/: elgamal.rs  mod.rs
src/fee/: mod.rs  remainder.rs
src/keys/: public.rs  secret.rs  stealth.rs  view.rs
src/transaction/: stake.rs  transfer.rs
tests/: crossover.rs  encryption.rs  encryption_gadgets.rs  keys.rs  message.rs  note.rs  note_test.rs  transaction.rs  transfer_gadget.rs
