[package]
name = "phoenix-core"
version = "0.13.0-rc.0"
authors = ["zer0 <matteo@dusk.network>", "Victor Lopez <victor@dusk.network"]
edition = "2018"
repository = "https://github.com/dusk-network/phoenix-core"
description = "Anonymity-preserving zero-knowledge proof-powered transaction model"
license = "MPL-2.0"
exclude = [".github/workflows/ci.yml", ".gitignore"]

[dependencies]
rand_core = { version = "0.6", default-features = false }
dusk-bytes = "0.1"
dusk-bls12_381 = { version = "0.8", default-features = false }
dusk-jubjub = { version = "0.10", default-features = false }
dusk-poseidon = { version = "0.22.0-rc", default-features = false }
dusk-pki = { version = "0.8.0-rc", default-features = false }
canonical = { version = "0.6", optional = true }
canonical_derive = { version = "0.6", optional = true }

[dev-dependencies]
assert_matches = "1.3"

[features]
canon = [
    "canonical",
    "canonical_derive",
    "dusk-poseidon/canon",
    "dusk-pki/canon"
]
