[package]
name = "phoenix-core"
version = "0.18.0"
authors = ["zer0 <matteo@dusk.network>", "Victor Lopez <victor@dusk.network"]
edition = "2021"
repository = "https://github.com/dusk-network/phoenix-core"
description = "Anonymity-preserving zero-knowledge proof-powered transaction model"
license = "MPL-2.0"
exclude = [".github/workflows/ci.yml", ".gitignore"]

[dependencies]
rand_core = { version = "0.6", default-features = false }
dusk-bytes = "0.1"
dusk-bls12_381 = { version = "0.11", default-features = false }
dusk-jubjub = { version = "0.12", default-features = false }
dusk-poseidon = { version = "0.28", default-features = false }
dusk-pki = { version = "0.11", default-features = false }
rusk-abi = { version = "0.7", default-features = false }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }

[dev-dependencies]
assert_matches = "1.3"
rand = "0.8"
rkyv = { version = "0.7", default-features = false, features = ["size_32"] }

[features]
default = []    # "alloc" is suggested as default feature but would be breaking change
alloc = []
rkyv-impl = [
    "dusk-poseidon/rkyv-impl",
    "dusk-jubjub/rkyv-impl",
    "dusk-pki/rkyv-impl",
    "dusk-bls12_381/rkyv-impl",
    "rkyv",
    "bytecheck"
]
