[package]
name = "phoenix-circuits"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dusk-network/phoenix/circuits"
description = "Circuit definitions for Phoenix, a privacy-preserving ZKP-based transaction model"
license = "MPL-2.0"
exclude = [".github/workflows/dusk-ci.yml", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phoenix-core = { version = "0.28.0", default-features = false, path = "../core" }
dusk-plonk = { version = "0.19", default-features = false }
dusk-jubjub = { version = "0.14", default-features = false }
poseidon-merkle = { version = "0.6", features = ["rkyv-impl", "zk", "size_32"] }
dusk-poseidon = { version = "0.39", features = ["zk"] }
jubjub-schnorr = { version = "0.4", features = ["zk"] }
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
ff = { version = "0.13", default-features = false }

[dev-dependencies]
lazy_static = "1.4"
