[package]
name = "phoenix-circuits"
version = "0.8.0-rc.0"
repository = "https://github.com/dusk-network/phoenix/circuits"
description = "Circuit definitions for Phoenix, a privacy-preserving ZKP-based transaction model"
exclude = [".github/workflows/dusk-ci.yml", ".gitignore"]

license.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dusk-bytes = "0.1"
phoenix-core = { version = "0.35.0-rc.0", default-features = false, path = "../core" }
dusk-bls12_381 = { version = "0.14", default-features = false }
dusk-jubjub = { version = "0.15", default-features = false }
poseidon-merkle = "0.9.0-rc.0"
dusk-poseidon = "0.42.0-rc.0"
jubjub-schnorr = "0.7.0-rc.0"
jubjub-elgamal = "0.5.0-rc.1"
rkyv = { version = "0.7", default-features = false, optional = true }
bytecheck = { version = "0.6", default-features = false, optional = true }
dusk-plonk = { version = "0.22.0-rc.0", default-features = false, optional = true }

[dev-dependencies]
lazy_static = "1.4"
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
ff = { version = "0.13", default-features = false }
ureq = "3"
sha2 = "0.10"

[features]
default = ["plonk"]
plonk = [
    "dusk-plonk",
    "poseidon-merkle/zk",
    "dusk-poseidon/zk",
    "jubjub-schnorr/zk",
    "jubjub-elgamal/zk",
]
rkyv-impl = [
    "phoenix-core/rkyv-impl",
    "dusk-jubjub/rkyv-impl",
    "jubjub-schnorr/rkyv-impl",
    "dusk-bls12_381/rkyv-impl",
    "rkyv",
    "bytecheck",
]
