[package]
name = "phoenix-core"
version = "0.32.0"
edition = "2021"
repository = "https://github.com/dusk-network/phoenix/core"
description = "Core types and functionalities for Phoenix, a privacy-preserving ZKP-based transaction model"
license = "MPL-2.0"
exclude = [".github/workflows/dusk-ci.yml", ".gitignore"]

[dependencies]
rand = { version = "0.8", default-features = false }
dusk-bytes = "0.1"
dusk-bls12_381 = { version = "0.13", default-features = false }
bls12_381-bls = { version = "0.4", default-features = false }
dusk-jubjub = { version = "0.14", default-features = false, features = ["zeroize"] }
dusk-poseidon = "0.40"
jubjub-schnorr = "0.5"
jubjub-elgamal = "0.1"
subtle = { version = "^2.2.1", default-features = false }
ff = { version = "0.13", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc", "rand_core"] }
zeroize = { version = "1", default-features = false, features = ["derive"] }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }
serde = { version = "1.0", optional = true }
bs58 = { version = "0.4" , optional = true }
base64 = { version = "0.22", optional = true }
serde_json = { version = "1.0", optional = true }
hex = { version = "0.4" , optional = true }

[dev-dependencies]
assert_matches = "1.3"
rand = "0.8"
rkyv = { version = "0.7", default-features = false, features = ["size_32"] }

[features]
default = ["alloc"]
alloc = []
rkyv-impl = [
    "dusk-jubjub/rkyv-impl",
    "jubjub-schnorr/rkyv-impl",
    "dusk-bls12_381/rkyv-impl",
    "bls12_381-bls/rkyv-impl",
    "rkyv",
    "bytecheck"
]
serde = ["dep:serde", "bs58", "base64", "hex", "serde_json", "dusk-jubjub/serde"]
